--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,9 +45,9 @@ http {
     upstream ormweb_backend {
         server ormweb:80;
     }
-    upstream bcmweb_backend {
-        server bcmweb:80;
-    }
+    # upstream bcmweb_backend {
+    #     server bcmweb:80;
+    # }
 
     server {
         listen 80;
@@ -128,15 +128,15 @@ http {
         }
 
         # BCM Web - /bcm/
-        location /bcm/ {
-            rewrite ^/bcm/(.*) /$1 break;
-            proxy_pass http://bcmweb_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location /bcm/ {
+        #     rewrite ^/bcm/(.*) /$1 break;
+        #     proxy_pass http://bcmweb_backend;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
 
         # Host Web - root
         location / {
