--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,42 +21,16 @@ http {
     keepalive_timeout 65;
     client_max_body_size 512M;
 
-    # Upstream backends (APIs)
-    upstream authapi_backend {
-        server authapi:6001;
-    }
-    upstream umapi_backend {
-        server umapi:6002;
-    }
-    upstream ormapi_backend {
-        server ormapi:6003;
-    }
-    upstream bcmapi_backend {
-        server bcmapi:6004;
-    }
-
-    # Upstream backends (Web apps)
-    upstream hostweb_backend {
-        server hostweb:80;
-    }
-    upstream umweb_backend {
-        server umweb:80;
-    }
-    upstream ormweb_backend {
-        server ormweb:80;
-    }
-    upstream bcmweb_backend {
-        server bcmweb:80;
-    }
-
     server {
         listen 80;
         server_name 10.0.1.32 localhost;
+        resolver 127.0.0.11 valid=10s ipv6=off;
 
         # Auth API - 6001 (strip /authapi prefix for backend)
         location /authapi/ {
             rewrite ^/authapi/(.*) /$1 break;
-            proxy_pass http://authapi_backend;
+            set $authapi_backend "http://authapi:6001";
+            proxy_pass $authapi_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -69,7 +43,8 @@ http {
         # User Management API - 6002
         location /umapi/ {
             rewrite ^/umapi/(.*) /$1 break;
-            proxy_pass http://umapi_backend;
+            set $umapi_backend "http://umapi:6002";
+            proxy_pass $umapi_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -82,7 +57,8 @@ http {
         # ORM API - 6003
         location /ormapi/ {
             rewrite ^/ormapi/(.*) /$1 break;
-            proxy_pass http://ormapi_backend;
+            set $ormapi_backend "http://ormapi:6003";
+            proxy_pass $ormapi_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -95,7 +71,8 @@ http {
         # BCM API - 6004
         location /bcmapi/ {
             rewrite ^/bcmapi/(.*) /$1 break;
-            proxy_pass http://bcmapi_backend;
+            set $bcmapi_backend "http://bcmapi:6004";
+            proxy_pass $bcmapi_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -108,7 +85,8 @@ http {
         # User Management Web - /um/ (backend serves at root)
         location /um/ {
             rewrite ^/um/(.*) /$1 break;
-            proxy_pass http://umweb_backend;
+            set $umweb_backend "http://umweb:80";
+            proxy_pass $umweb_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -119,7 +97,8 @@ http {
         # ORM Web - /orm/
         location /orm/ {
             rewrite ^/orm/(.*) /$1 break;
-            proxy_pass http://ormweb_backend;
+            set $ormweb_backend "http://ormweb:80";
+            proxy_pass $ormweb_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -127,10 +106,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        BCM Web - /bcm/
+        # BCM Web - /bcm/
         location /bcm/ {
             rewrite ^/bcm/(.*) /$1 break;
-            proxy_pass http://bcmweb_backend;
+            set $bcmweb_backend "http://bcmweb:80";
+            proxy_pass $bcmweb_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -140,7 +120,8 @@ http {
 
         # Host Web - root
         location / {
-            proxy_pass http://hostweb_backend/;
+            set $hostweb_backend "http://hostweb:80";
+            proxy_pass $hostweb_backend/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
