--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
         location /authapi/ {
             rewrite ^/authapi/(.*) /$1 break;
             set $authapi_backend "http://authapi:6001";
-            proxy_pass $authapi_backend;
+            proxy_pass $authapi_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -44,7 +44,7 @@ http {
         location /umapi/ {
             rewrite ^/umapi/(.*) /$1 break;
             set $umapi_backend "http://umapi:6002";
-            proxy_pass $umapi_backend;
+            proxy_pass $umapi_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -58,7 +58,7 @@ http {
         location /ormapi/ {
             rewrite ^/ormapi/(.*) /$1 break;
             set $ormapi_backend "http://ormapi:6003";
-            proxy_pass $ormapi_backend;
+            proxy_pass $ormapi_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -72,7 +72,7 @@ http {
         location /bcmapi/ {
             rewrite ^/bcmapi/(.*) /$1 break;
             set $bcmapi_backend "http://bcmapi:6004";
-            proxy_pass $bcmapi_backend;
+            proxy_pass $bcmapi_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -86,7 +86,7 @@ http {
         location /um/ {
             rewrite ^/um/(.*) /$1 break;
             set $umweb_backend "http://umweb:80";
-            proxy_pass $umweb_backend;
+            proxy_pass $umweb_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -98,7 +98,7 @@ http {
         location /orm/ {
             rewrite ^/orm/(.*) /$1 break;
             set $ormweb_backend "http://ormweb:80";
-            proxy_pass $ormweb_backend;
+            proxy_pass $ormweb_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -110,7 +110,7 @@ http {
         location /bcm/ {
             rewrite ^/bcm/(.*) /$1 break;
             set $bcmweb_backend "http://bcmweb:80";
-            proxy_pass $bcmweb_backend;
+            proxy_pass $bcmweb_backend$uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -118,10 +118,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Host Web - root
+        # Host Web - root (pass full request URI so .js, .css, fonts are served correctly)
         location / {
             set $hostweb_backend "http://hostweb:80";
-            proxy_pass $hostweb_backend/;
+            proxy_pass $hostweb_backend$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
