--- a/ormapi/package.json
+++ b/ormapi/package.json
@@ -31,6 +31,7 @@
     "express": "4.18.1",
     "express-fileupload": "1.4.0",
     "file-type": "^14.7.1",
+    "gulp-util": "^3.0.8",
     "helmet": "6.0.0",
     "json2csv": "5.0.7",
     "jsonwebtoken": "8.5.1",
