--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,9 +28,8 @@ http {
 
         # Auth API - 6001 (strip /authapi prefix for backend)
         location /authapi/ {
-            rewrite ^/authapi/(.*) /$1 break;
-            set $authapi_backend "http://authapi:6001";
-            proxy_pass $authapi_backend$uri;
+            rewrite ^/authapi(.*) $1 break;
+            proxy_pass http://authapi:6001;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -42,9 +41,8 @@ http {
 
         # User Management API - 6002
         location /umapi/ {
-            rewrite ^/umapi/(.*) /$1 break;
-            set $umapi_backend "http://umapi:6002";
-            proxy_pass $umapi_backend$uri;
+            rewrite ^/umapi(.*) $1 break;
+            proxy_pass http://umapi:6002;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -56,9 +54,8 @@ http {
 
         # ORM API - 6003
         location /ormapi/ {
-            rewrite ^/ormapi/(.*) /$1 break;
-            set $ormapi_backend "http://ormapi:6003";
-            proxy_pass $ormapi_backend$uri;
+            rewrite ^/ormapi(.*) $1 break;
+            proxy_pass http://ormapi:6003;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -70,9 +67,8 @@ http {
 
         # BCM API - 6004
         location /bcmapi/ {
-            rewrite ^/bcmapi/(.*) /$1 break;
-            set $bcmapi_backend "http://bcmapi:6004";
-            proxy_pass $bcmapi_backend$uri;
+            rewrite ^/bcmapi(.*) $1 break;
+            proxy_pass http://bcmapi:6004;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -84,9 +80,8 @@ http {
 
         # User Management Web - /um/ (backend serves at root)
         location /um/ {
-            rewrite ^/um/(.*) /$1 break;
-            set $umweb_backend "http://umweb:80";
-            proxy_pass $umweb_backend$uri;
+            rewrite ^/um(.*) $1 break;
+            proxy_pass http://umweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -96,9 +91,8 @@ http {
 
         # ORM Web - /orm/
         location /orm/ {
-            rewrite ^/orm/(.*) /$1 break;
-            set $ormweb_backend "http://ormweb:80";
-            proxy_pass $ormweb_backend$uri;
+            rewrite ^/orm(.*) $1 break;
+            proxy_pass http://ormweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -108,9 +102,8 @@ http {
 
         # BCM Web - /bcm/
         location /bcm/ {
-            rewrite ^/bcm/(.*) /$1 break;
-            set $bcmweb_backend "http://bcmweb:80";
-            proxy_pass $bcmweb_backend$uri;
+            rewrite ^/bcm(.*) $1 break;
+            proxy_pass http://bcmweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -120,8 +113,7 @@ http {
 
         # Host Web - root (pass full request URI so .js, .css, fonts are served correctly)
         location / {
-            set $hostweb_backend "http://hostweb:80";
-            proxy_pass $hostweb_backend$request_uri;
+            proxy_pass http://hostweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
