--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,10 +26,20 @@ http {
         server_name 10.0.1.32 localhost;
         resolver 127.0.0.11 valid=10s ipv6=off;
 
+        # Use variables for upstream so resolver 127.0.0.11 is used (avoids stale IPs after container restart)
+        set $backend_authapi authapi;
+        set $backend_umapi umapi;
+        set $backend_ormapi ormapi;
+        set $backend_bcmapi bcmapi;
+        set $backend_umweb umweb;
+        set $backend_ormweb ormweb;
+        set $backend_bcmweb bcmweb;
+        set $backend_hostweb hostweb;
+
         # Auth API - 6001 (strip /authapi prefix for backend)
         location /authapi/ {
             rewrite ^/authapi(.*) $1 break;
-            proxy_pass http://authapi:6001;
+            proxy_pass http://$backend_authapi:6001;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -42,7 +52,7 @@ http {
         # User Management API - 6002
         location /umapi/ {
             rewrite ^/umapi(.*) $1 break;
-            proxy_pass http://umapi:6002;
+            proxy_pass http://$backend_umapi:6002;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -55,7 +65,7 @@ http {
         # ORM API - 6003
         location /ormapi/ {
             rewrite ^/ormapi(.*) $1 break;
-            proxy_pass http://ormapi:6003;
+            proxy_pass http://$backend_ormapi:6003;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -68,7 +78,7 @@ http {
         # BCM API - 6004
         location /bcmapi/ {
             rewrite ^/bcmapi(.*) $1 break;
-            proxy_pass http://bcmapi:6004;
+            proxy_pass http://$backend_bcmapi:6004;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -81,7 +91,7 @@ http {
         # User Management Web - /um/ (backend serves at root)
         location /um/ {
             rewrite ^/um(.*) $1 break;
-            proxy_pass http://umweb:80;
+            proxy_pass http://$backend_umweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -92,7 +102,7 @@ http {
         # ORM Web - /orm/
         location /orm/ {
             rewrite ^/orm(.*) $1 break;
-            proxy_pass http://ormweb:80;
+            proxy_pass http://$backend_ormweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -103,7 +113,7 @@ http {
         # BCM Web - /bcm/
         location /bcm/ {
             rewrite ^/bcm(.*) $1 break;
-            proxy_pass http://bcmweb:80;
+            proxy_pass http://$backend_bcmweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -113,7 +123,7 @@ http {
 
         # Host Web - root (pass full request URI so .js, .css, fonts are served correctly)
         location / {
-            proxy_pass http://hostweb:80;
+            proxy_pass http://$backend_hostweb:80;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
