--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "6001:6001"
     environment:
       - PORT=6001
+      - DB_PASSWORD=${DB_PASSWORD}
     networks:
       - risktrac-net
     restart: unless-stopped
@@ -32,6 +33,8 @@ services:
     environment:
       - PORT=6002
       - AUTH_SERVICE_URL=http://authapi:6001
+      - DB_PASSWORD=${DB_PASSWORD}
+      - NOTIFICATION_DB_PASSWORD=${NOTIFICATION_DB_PASSWORD:-${DB_PASSWORD}}
     networks:
       - risktrac-net
     restart: unless-stopped
@@ -52,6 +55,8 @@ services:
       - "6003:6003"
     environment:
       - PORT=6003
+      - DB_PASSWORD=${DB_PASSWORD}
+      - NOTIFICATION_DB_PASSWORD=${NOTIFICATION_DB_PASSWORD:-${DB_PASSWORD}}
     networks:
       - risktrac-net
     restart: unless-stopped
@@ -66,6 +71,8 @@ services:
       - "6004:6004"
     environment:
       - PORT=6004
+      - DB_PASSWORD=${DB_PASSWORD}
+      - NOTIFICATION_DB_PASSWORD=${NOTIFICATION_DB_PASSWORD:-${DB_PASSWORD}}
     networks:
       - risktrac-net
     restart: unless-stopped
