--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - DB_PORT=${DB_PORT:-1433}
       - DB_NAME=${DB_NAME:-SE_GRC}
     volumes:
-      # Mount certs so private.pem (and public.pem, secret.pem) are available for login decryption
-      - ./authapi/config/certs:/app/config/certs:ro
+      # Mount certs so private.pem/public.pem are available for login; writable so authapi can auto-generate if missing
+      - ./authapi/config/certs:/app/config/certs
     networks:
       - risktrac-net
     restart: unless-stopped
