--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 # RiskTrac GRC - Docker Compose
 # Server: 10.0.1.32
-# Access app at http://10.0.1.32:8080 (nginx; use 8080 if host port 80 is in use)
-# API ports: 6001 authapi, 6002 umapi, 6003 ormapi, 6004 bcmapi
+# API ports: 6001 authapi, 6002 umapi, 6003 ormapi, 6004 bcmapi (expose and access via your reverse proxy or port mapping)
 # Docker Hub: vinod9072/imagename:v1
-# Service name is risktrac-nginx (not "nginx") so only one image tag is produced: vinod9072/risktrac-nginx:v1
+# Nginx/reverse proxy: run separately (e.g. docker run or host nginx); not included in this compose.
 name: risktrac-grc
 
 services:
@@ -139,25 +138,6 @@ services:
       context: ./bcmweb
       dockerfile: Dockerfile
     container_name: risktrac-bcmweb
-    networks:
-      - risktrac-net
-    restart: unless-stopped
-
-  # Single image only — build separately: docker build -t vinod9072/risktrac-nginx:v1 ./nginx
-  risktrac-nginx:
-    image: vinod9072/risktrac-nginx:v1
-    container_name: risktrac-nginx
-    ports:
-      - "8080:80"
-    depends_on:
-      - authapi
-      - umapi
-      - ormapi
-      - bcmapi
-      - hostweb
-      - umweb
-      - ormweb
-      - bcmweb
     networks:
       - risktrac-net
     restart: unless-stopped
