--- a/bcmweb/nginx.conf
+++ b/bcmweb/nginx.conf
@@ -6,6 +6,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+        error_page 405 =200 /index.html;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
