--- a/bcmweb/Dockerfile
+++ b/bcmweb/Dockerfile
@@ -14,7 +14,7 @@ COPY . .
 RUN npm run build -- --configuration=production --base-href=/bcm/
 
 FROM nginx:alpine
-COPY --from=build /app/dist/orm /usr/share/nginx/html
+COPY --from=build /app/dist/bcm /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
