--- a/bcmweb/Dockerfile
+++ b/bcmweb/Dockerfile
@@ -13,9 +13,11 @@ RUN npm config set fetch-retries 5 && \
     (npm install --legacy-peer-deps || npm install --legacy-peer-deps || npm install --legacy-peer-deps)
 
 COPY . .
-RUN npm run build -- --configuration=production --base-href=/bcm/
+# Project "bcm" in angular.json has outputPath "dist/web" - do not use dist/bcm
+RUN npx ng build bcm --configuration=production --base-href=/bcm/
 
 FROM nginx:alpine
+# Must match outputPath in angular.json (currently dist/web)
 COPY --from=build /app/dist/web /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
