--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,6 +169,47 @@ services:
       - risktrac-net
     restart: unless-stopped
 
+  # --- Monitoring: Prometheus + Grafana (official Docker images) ---
+  prometheus:
+    image: prom/prometheus:v2.47.0
+    container_name: risktrac-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.enable-lifecycle
+    networks:
+      - risktrac-net
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:10.2.0
+    container_name: risktrac-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=http://localhost:3000
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+    depends_on:
+      - prometheus
+    networks:
+      - risktrac-net
+    restart: unless-stopped
+
 networks:
   risktrac-net:
     driver: bridge
+
+volumes:
+  prometheus_data:
+  grafana_data:
