--- a/bcmapi/package.json
+++ b/bcmapi/package.json
@@ -46,7 +46,8 @@
     "uniqid": "5.4.0",
     "validator": "13.11.0",
     "winston": "3.11.0",
-    "winston-daily-rotate-file": "4.7.1"
+    "winston-daily-rotate-file": "4.7.1",
+    "browser-sync": "^2.29.3"
   },
   "author": "SecurEyes",
   "license": "ISC",
