--- a/bcmweb/nginx.conf
+++ b/bcmweb/nginx.conf
@@ -4,6 +4,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Serve CSS files requested at root (e.g. /theme.css) from assets/css/ (fixes 404 when base path differs)
+    location ~ ^/(theme|nav|form-fields|layout|modal|tables|media-query)\.css$ {
+        rewrite ^/(.*)$ /assets/css/$1 break;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
         error_page 405 =200 /index.html;
