--- a/monitoring/grafana/provisioning/datasources/datasources.yml
+++ b/monitoring/grafana/provisioning/datasources/datasources.yml
@@ -1,8 +1,9 @@
 # Auto-provision Prometheus as default Grafana datasource
-# Prometheus uses port 9090 (not 9000). Use this URL when editing the datasource manually.
+# Prometheus uses port 9090 (not 9000). Never use port 9000.
 apiVersion: 1
 datasources:
   - name: Prometheus
+    uid: prometheus
     type: prometheus
     access: proxy
     url: http://prometheus:9090
